@@ -3,7 +3,7 @@
  */
 package test.java.model;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
 
 import java.io.File;
 import java.util.Arrays;
@@ -16,7 +16,7 @@ import main.java.model.Bundesland;
 import main.java.model.Bundestagswahl;
 import main.java.model.Kandidat;
 import main.java.model.Mandat;
-import main.java.model.Wahlkreis;
+
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -39,46 +39,44 @@ public class KandidatTest {
 	private static Bundestagswahl testWahl;
 	private static Bundesland testBundesland;
 	private static List<Bundesland> testBundeslaender;
-	private static List<Wahlkreis> testWahlkreise;
 	private static Kandidat testKandidat;
-	
-	
-	private String ungueltigerParameter;
-	private String gueltigerParameter = "test";
 
-	public KandidatTest(String parameter) {
-		this.ungueltigerParameter = parameter;
-		
+	// creates the test data
+	@Parameters
+	public static Collection<Object[]> data() {
+		final Object[][] data = new Object[][] { { "" }, { null } };
+		return Arrays.asList(data);
 	}
-	
-	 // creates the test data
-	  @Parameters
-	  public static Collection<Object[]> data() {
-	    Object[][] data = new Object[][] { { "" }, { null }};
-	    return Arrays.asList(data);
-	  }
-	  
 
 	/**
 	 * @throws java.lang.Exception
 	 */
 	@BeforeClass
 	public static void setUpBeforeClass() throws Exception {
-		ImportExportManager i = new ImportExportManager();
-		File[] csvDateien = new File[2];
+		final ImportExportManager i = new ImportExportManager();
+		final File[] csvDateien = new File[2];
 		csvDateien[0] = new File(
 				"src/main/resources/importexport/Ergebnis2013.csv");
 		csvDateien[1] = new File(
 				"src/main/resources/importexport/Wahlbewerber2013.csv");
 
 		try {
-			ausgangsWahl = i.importieren(csvDateien);
-		} catch (Exception e1) {
+			KandidatTest.ausgangsWahl = i.importieren(csvDateien);
+		} catch (final Exception e1) {
 			e1.printStackTrace();
 			System.out.println("Keine gï¿½ltige CSV-Datei :/");
 		}
 
-		Mandatsrechner2013.getInstance().berechne(ausgangsWahl);
+		Mandatsrechner2013.getInstance().berechne(KandidatTest.ausgangsWahl);
+
+	}
+
+	private final String ungueltigerParameter;
+
+	private final String gueltigerParameter = "test";
+
+	public KandidatTest(String parameter) {
+		this.ungueltigerParameter = parameter;
 
 	}
 
@@ -88,57 +86,63 @@ public class KandidatTest {
 	@Before
 	public void setUp() throws Exception {
 
-		testWahl = ausgangsWahl.deepCopy();
-		testBundeslaender = testWahl.getDeutschland().getBundeslaender();
+		KandidatTest.testWahl = KandidatTest.ausgangsWahl.deepCopy();
+		KandidatTest.testBundeslaender = KandidatTest.testWahl.getDeutschland()
+				.getBundeslaender();
 		// Testbundesland ist Schleswig-Holstein
-		testBundesland = testBundeslaender.get(0);
-		testWahlkreise = testBundesland.getWahlkreise();
-		testKandidat = testWahl.getParteien().getFirst().getLandesliste().get(0)
-				.getListenkandidaten().get(0);
+		KandidatTest.testBundesland = KandidatTest.testBundeslaender.get(0);
+		KandidatTest.testBundesland.getWahlkreise();
+		KandidatTest.testKandidat = KandidatTest.testWahl.getParteien()
+				.getFirst().getLandesliste().get(0).getListenkandidaten()
+				.get(0);
 	}
 
-	@Test(expected = IllegalArgumentException.class)
-	public void testSetInfo() {
-		testKandidat.setInfo(ungueltigerParameter, gueltigerParameter, 0);
-	}
-	
-	@Test(expected = IllegalArgumentException.class)
-	public void testSetInfo2() {
-		testKandidat.setInfo(gueltigerParameter, ungueltigerParameter, 0);
-	}
+	@Test
+	public void testEquals() {
+		final Kandidat kand1 = new Kandidat("Merkel", "Manfred", 1963,
+				Mandat.DIREKTMANDAT, KandidatTest.testKandidat.getPartei());
+		final Kandidat kand2 = new Kandidat("Merkel", "Momo", 1963,
+				Mandat.DIREKTMANDAT, KandidatTest.testKandidat.getPartei());
 
+		assertEquals(false, kand1.equals(kand2));
+	}
 
 	@Test
 	public void testKonstruktor() {
-		
-		Kandidat kand = new Kandidat( "Merkel","Manfred", 1963, Mandat.DIREKTMANDAT, testKandidat.getPartei());
-		
+
+		final Kandidat kand = new Kandidat("Merkel", "Manfred", 1963,
+				Mandat.DIREKTMANDAT, KandidatTest.testKandidat.getPartei());
+
 		assertEquals("Manfred", kand.getVorname());
 		assertEquals("Merkel", kand.getName());
 		assertEquals("Merkel", kand.getName());
 		assertEquals(Mandat.DIREKTMANDAT, kand.getMandat());
-		assertEquals(testKandidat.getPartei(), kand.getPartei());
-		
-	}
-	
-	@Test(expected = IllegalArgumentException.class)
-	public void testKonstruktor2() {
-		Kandidat kand = new Kandidat("Merkel", "Manfred", 1963, Mandat.DIREKTMANDAT, testKandidat.getPartei(), null);
-	}
-	
-	
-	@Test(expected = IllegalArgumentException.class)
-	public void testSetErststimme() {
-		testKandidat.setErststimme(null);
+		assertEquals(KandidatTest.testKandidat.getPartei(), kand.getPartei());
 
 	}
-	
-	@Test
-	public void testEquals() {
-		Kandidat kand1 = new Kandidat("Merkel", "Manfred", 1963, Mandat.DIREKTMANDAT, testKandidat.getPartei());
-		Kandidat kand2 = new Kandidat("Merkel", "Momo", 1963, Mandat.DIREKTMANDAT, testKandidat.getPartei());
-		
-		assertEquals(false, kand1.equals(kand2));
+
+	@Test(expected = IllegalArgumentException.class)
+	public void testKonstruktor2() {
+		new Kandidat("Merkel", "Manfred", 1963, Mandat.DIREKTMANDAT,
+				KandidatTest.testKandidat.getPartei(), null);
 	}
-	
+
+	@Test(expected = IllegalArgumentException.class)
+	public void testSetErststimme() {
+		KandidatTest.testKandidat.setErststimme(null);
+
+	}
+
+	@Test(expected = IllegalArgumentException.class)
+	public void testSetInfo() {
+		KandidatTest.testKandidat.setInfo(this.ungueltigerParameter,
+				this.gueltigerParameter, 0);
+	}
+
+	@Test(expected = IllegalArgumentException.class)
+	public void testSetInfo2() {
+		KandidatTest.testKandidat.setInfo(this.gueltigerParameter,
+				this.ungueltigerParameter, 0);
+	}
+
 }
